<resources>
    <string name="app_name">AQR Supreme</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AQR Supreme!</string>
    <string name="nav_header_subtitle">Air Quality Reader</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_current">Current</string>
    <string name="menu_historic">Historic</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_signoff">Sign Off</string>
    <string name="device_name">device_name</string>
    <string name="device_address">device address</string>
    <string name="action_bluetooth_connect">Bluetooth Devices</string>
</resources>